# pixy2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  build.sh
src/common/inc/: pixydefs.h
src/host/libpixyusb2/include/: libpixyusb2.h
src/host/libpixyusb2/src/: Makefile
